--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
    "version": "1.0.0",
    "description": "",
    "main": "app.js",
+   "type": "module",
    "scripts": {
       "start": "nodemon app.js"
    },
@@ -18,10 +19,13 @@
    "homepage": "https://github.com/Imemario77/PassMaster#readme",
    "dependencies": {
       "bcryptjs": "^2.4.3",
+      "cookie-parser": "^1.4.6",
+      "crypto-js": "^4.1.1",
       "dotenv": "^16.0.3",
+      "ejs": "^3.1.9",
       "express": "^4.18.2",
       "jsonwebtoken": "^9.0.0",
-      "ejs": "^3.1.9",
+      "mongoose": "^7.1.0",
       "nodemailer": "^6.9.1"
    }
 }
